--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "cassandra-driver": "^4.6.0",
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
@@ -17,8 +18,8 @@
   "scripts": {
     "lint:check": "prettier . --check",
     "lint:run": "prettier . --write --ignore-unknown",
-    "dev": "nodemon ./main.js",
-    "start": "NODE_ENV=production node main.js"
+    "dev": "DEBUG=middleware:*,app:* nodemon ./main.js | ./node_modules/.bin/pino-pretty",
+    "start": "NODE_ENV=production DEBUG=middleware:*,app:* node main.js"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
@@ -26,6 +27,7 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.13",
     "nodemon": "^2.0.4",
+    "pino-pretty": "^4.2.0",
     "prettier": "2.1.1"
   },
   "husky": {
