feat: improved logging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,3 +30,5 @@ services:
       - PGPASSWORD='secretpassword'
       - PGHOST=postgres
       - PGPORT=5432
+    volumes:
+      - ${GOOGLE_APPLICATION_CREDENTIALS}:${GOOGLE_APPLICATION_CREDENTIALS}
