--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,6 @@ version: '3'
 services:
   redis:
     image: redis
-    ports:
-      - '6379:6379'
   postgres:
     image: postgres
     restart: always
@@ -23,6 +21,7 @@ services:
       - postgres
     links:
       - postgres
+      - redis
     restart: always
     environment:
       - PORT=3000
