--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,16 @@ version: '3'
 services:
   redis:
     image: redis
-    ports:
-      - '6379:6379'
+    #ports:
+    #  - '6379:6379'
+    #volumes:
+    #  - '$PWD/redis.conf:/usr/local/etc/redis/redis.confi'
+    # command: redis-server /usr/local/etc/redis/redis.conf 
   postgres:
     image: postgres
     restart: always
-    ports:
-      - '5432:5432'
+    #ports:
+    #  - '5432:5432'
     volumes:
       - './data/postgres:/var/lib/postgresql/data'
     environment:
@@ -23,6 +26,7 @@ services:
       - postgres
     links:
       - postgres
+      - redis
     restart: always
     environment:
       - PORT=3000
